# ccc-code

./: .aider.conf.yml  .context-chat.md  .context-project.md  .context-settings.md  .gitignore  CHANGELOG.md  README.md  fehlen_noch.txt  fehlt-noch.txt  init-ccc-production.sh  init-ccc-project.sh  install  setup.py  tree-ccw-ccw.txt  tree-wo-wo
.github/workflows/: test-cca.yml
.github/workflows-disabled/: diagnostic.yml  test-cca.yml  test-ccb.yml  test-ccc.yml
.github/workflows-old/: ccc-command-cli.yml  test-ccb-install.yml
cca/: install  requirements.txt  setup.cfg  setup.py
cca/cca/: __init__.py
cca/cca/cli/: __init__.py  bootstrap.py  main.py
cca/tests/: __init__.py  purge.sh  test_cca_binary.py  test_cca_commands.py  test_cca_install.py  travis.sh
cca/tests/cli/: __init__.py  test_cca_commands.py
ccb/: install  pyproject.toml  setup.py
ccb/ccb/: __init__.py  main.py
ccb/ccb/controllers/: base.py
ccb/ccb/core/: exc.py  version.py
ccb/ccb/plugins/: __init__.py  check.py  debug.py
ccb/tests/: travis.sh
ccb/tests/cli/: test_ccb_check.py  test_ccb_commands.py  test_ccb_debug.py
ccc/: .gitignore  README.md  __init__.py  pyproject.toml
ccc-old-old/: README.md
ccc-old-old/cli/plugins/: clean.py  secure.py  site_backup.py  site_clone.py  site_functions.py
ccc-old-old/cli/templates/: ccc-kernel-service.mustache  cloudflare.mustache  fail2ban.mustache  freshclam.mustache  nextcloud.mustache  php.mustache  wpcommon.mustache
ccc-old-old/core/: apt_repo.py  fileutils.py  services.py
ccc-old/ccc/: main.py
ccc-old/ccc/config/: default.yaml
ccc-old/cli/controllers/: base.py
ccc-old/cli/plugins/: stack_upgrade.py
ccc-old/cli/templates/: virtualconf.mustache  wprocket.mustache
ccc-old/core/: checkfqdn.py  download.py  extract.py  git.py  sendmail.py  stackconf.py
ccc-old/tests/: test_main.py
ccc/.github/workflows/: test-ccc.yml
ccc/ccc/: __init__.py  main.py
ccc/cli/: __init__.py  bootstrap.py  main.py
ccc/cli/plugins/: __init__.py  debug.py  import_slow_log.py  info.py  log.py  models.py  site.py  site_create.py  site_update.py  stack.py  stack_migrate.py  stack_pref.py  stack_services.py  sync.py
ccc/cli/templates/: acl.mustache  avif.mustache  ccc-kernel-script.mustache  ccc-plus.mustache  ccc-ufw.mustache  cf-update.mustache  locations.mustache  map-wp.mustache  nginx-core.mustache  nginx-php.mustache  nginx-site.mustache  publicsuffix.mustache  redis.mustache  ssl.mustache  stub_status.mustache  upstream.mustache  webp.mustache  wo-ufw.mustache  wpce.mustache  wpfc.mustache  wpsc.mustache  wpsubdir.mustache
ccc/core/: __init__.py  addswap.py  aptget.py  cron.py  database.py  domainvalidate.py  exc.py  fileutils.py  logging.py  logwatch.py  mysql.py  nginx.py  nginxhashbucket.py  services.py  shellexec.py  template.py  variables.py
ccc/tests/: conftest.py  test_cli.py  test_main.py
ccc/utils/: test.py
ccw/: .context-ccw-project.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  fehlen_noch.txt  install  requirements.txt  setup.cfg  setup.py
ccw/ccw/: __init__.py  tmp.sh
ccw/ccw/cli/: __init__.py  bootstrap.py  main.py
ccw/ccw/core/: __init__.py  acme.py  addswap.py  apt_repo.py  aptget.py  checkfqdn.py  cron.py  database.py  domainvalidate.py  download.py  exc.py  extract.py  fileutils.py  git.py  logging.py  logwatch.py  mysql.py  nginx.py  nginxhashbucket.py  random.py  sendmail.py  services.py  shellexec.py  sslutils.py  stackconf.py  template.py  variables.py  wpcli.py
ccw/ccw/utils/: __init__.py  test.py
ccw/cli/: main.py
ccw/cli/plugins/: import_slow_log.py  maintenance.py  sitedb.py  stack.py  (+1 more)
ccw/config/: wo.conf
ccw/core/: acme.py  sslutils.py  wpcli.py
ccw/docs/: REFACTORING.md  wo.8
ccw/tests/: issue.sh  travis.sh
config/: ccc.conf
config/bash_completion.d/: ccc_auto.rc
docs/: ccc.8
docs/book-01/: install-handbook.md
docs/book-02/: HUFI.AI.md
docs/install/: complete.md  summary.md
pfad/zur/: datei.py
wo/: .gitignore  requirements.txt
(+147 files in other folders)
